<resources>
    <string name="app_name">CS310 Filippo de Cristofaro (decristo)</string>
    <string name="mines_10">Mines: 10</string>
    <string name="time_0">Time: 0</string>
    <string name="toggle_mode">Toggle Mode</string>
    <string name="flag_icon_description" />
    <string name="clock_icon_description" />
    <string name="you_won">You Won!</string>
    <string name="time_120s">Time: 120s</string>
    <string name="play_again">Play Again</string>
    <string name="You_won">You Won!</string>
    <string name="You_lost">You Lost!</string>
    <string name="time_taken">Time Elapsed: %1$d s</string>
    <string name="time_taken_text">Time: %1$d s</string>
    <string name="timer_text">Time: %1$d s</string>
    <string name="time_text">Time: %ds</string>
    <string name="time_0s">Time: 0s</string>
    <string name="game_over">Game Over!</string>
    <string name="mine_count_text">Mines: %1$d</string>
    <string name="mines_4">Mines: 4</string>
    <string name="filippo_de_cristofaro">CSCI 310 Filippo de Cristofaro</string>
    <string name="_10">10</string>
    <string name="time_icon_description" />
    <string name="_0s">0s</string>
</resources>
